--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-  /* telling every element on the page to not have any margin or border unless it was explicitly told to */
 * {
   margin: 0;
   padding: 0;
@@ -6,16 +5,16 @@
 }
 
 body {
-    /* more on this crazy alphanumerical value in a minute! */
-    color: #39a6b2;
-    font-family: Helvetica, Arial, sans-serif;
-  }
-  
-  /* apply styles to <header> */
+  /* more on this crazy alphanumerical value in a minute! */
+  color: #39a6b2;
+  font-family: Helvetica, Arial, sans-serif;
+}
+
+/* apply styles to <header> */
 header {
-    padding: 20px 35px;
-    background-color: #39a6b2;
-  }
+  padding: 20px 35px;
+  background-color: #39a6b2;
+}
 
 header h1 {
   font-weight: bold;
@@ -24,7 +23,6 @@ header h1 {
   margin: 0;
   display: inline;
 }
-
 header a {
   text-decoration: none;
   color: #fce138;
@@ -44,8 +42,7 @@ header nav ul li a {
   font-weight: lighter;
   font-size: 22px;
 }
-  
-/* apply styles to <footer> */
+
 footer {
   background: #fce138;
   width: 100%;
@@ -69,21 +66,26 @@ footer a {
   color: #024e76;
 }
 
-/* hero style start */
+section {
+  padding: 60px;
+}
+
+/* Hero Style Start */
 .hero {
-  background-image: url("../images/hero-bg.jpg");
+  background-image: url('../images/hero-bg.jpg');
   height: 600px;
   background-size: cover;
   background-position: center;
   position: relative;
 }
+/* Hero Style End */
 
 .hero-form {
+  border: 3px solid #024e76;
   background-color: #fce138;
   padding: 20px;
   width: 500px;
   color: #024e76;
-  border:solid 3px #024e76;
   position: absolute;
   bottom: 120px;
   right: 140px;
@@ -93,7 +95,6 @@ footer a {
   font-size: 24px;
   margin: 0;
 }
-
 .hero-form p {
   margin: 5px 0 15px 0;
 }
@@ -109,7 +110,7 @@ footer a {
 }
 
 .hero-form label {
-  margin: 0 3px;
+  margin: 0 5px;
 }
 
 .hero-form button {
@@ -119,4 +120,3 @@ footer a {
   padding: 10px 20px;
   font-size: 16px;
 }
-/* HERO STYLES END */
