add flexbox to what we do

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,9 +142,6 @@ section {
 /* Hero Style End */
 
 /* style what we do */
-.intro {
-  text-align: center;
-}
 
 .intro p {
   line-height: 1.7;
@@ -152,22 +149,23 @@ section {
   width: 80%;
   font-size: 20px;
   margin: 0 auto;
+  text-align: center;
 }
 
 /* style what you do */
 
 .steps {
-  text-align: center;
   background: #fce138;
 }
 
 .section-title {
   font-size: 55px;
-  display: inline-block;
-  padding: 0 100px 20px 100px;
   border-bottom: 3px solid;
-  margin-bottom: 35px;
   color: #024e76;
+  padding-bottom: 20px;
+  text-align: center;
+  margin: 0 auto 35px auto;
+  width: 50%;
 }
 
 .primary-border {
@@ -205,7 +203,7 @@ section {
 /* style trainers */
 
 .trainers {
-  text-align: center;
+
 }
 
 .trainer {
@@ -227,14 +225,6 @@ section {
   width: 65%;
 }
 
-.text-left {
-  text-align: left;
-}
-
-.text-right {
-  text-align: right;
-}
-
 .trainer-bio h3 {
   font-size: 32px;
   margin-bottom: 8px;
@@ -254,7 +244,6 @@ section {
 /* reach out section */
 
 .contact {
-  text-align: center;
   background: #024e76;
 }
 
@@ -294,3 +283,14 @@ section {
 
 /*reach out styles end */
 
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.flex-row {
+  display: flex;
+}
