--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,6 +179,7 @@ section {
 .step h3 {
   color: #024e76;
   font-size: 46px;
+  flex: 1 30%;
 }
 
 .step-text p {
@@ -201,6 +202,26 @@ section {
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
+}
+
+.step-info {
+  flex: 2 70%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.step-img {
+  flex: 1 12%;
+  margin-right: 20px;
+}
+
+.step-text {
+  flex: 12;
+}
+
+.step-img img {
+  max-width: 100%;
 }
 
 /* style trainers */
